<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <LinearLayout
        android:id="@+id/frag_register_account_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_above="@id/frag_register_phone_num_ll">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/nickname"
            android:scaleType="centerCrop"/>

        <EditText
            android:id="@+id/frag_register_nickname_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:padding="8dp"
            android:background="@null"
            android:inputType="text"
            android:hint="@string/s_frag_register_nickname"
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/frag_register_phone_num_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/frag_register_password_ll"
        android:layout_margin="16dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/phone"
            android:scaleType="centerCrop"/>

        <EditText
            android:id="@+id/frag_register_phone_num_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:padding="8dp"
            android:background="@null"
            android:inputType="number"
            android:hint="@string/s_frag_register_phone_num"
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/frag_register_password_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_above="@id/frag_register_password_check_ll">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/password"
            android:scaleType="centerCrop"/>

        <EditText
            android:id="@+id/frag_register_password_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:padding="8dp"
            android:background="@null"
            android:inputType="textPassword"
            android:hint="@string/s_frag_login_register_password"
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/frag_register_password_check_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_centerVertical="true">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/password_check"
            android:scaleType="centerCrop"/>

        <EditText
            android:id="@+id/frag_register_password_check_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:padding="8dp"
            android:background="@null"
            android:inputType="textPassword"
            android:hint="@string/s_frag_register_password_check"
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/frag_register_protocol_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_below="@id/frag_register_password_check_ll">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/protocol"
            android:scaleType="centerCrop"/>

        <CheckBox
            android:id="@+id/frag_register_protocol_cb"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:text="@string/s_frag_register_protocol"
            android:textColor="@color/btn_style_1"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/frag_register_tip_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_below="@id/frag_register_submit"
        android:textColor="#000000"
        android:textStyle="bold"
        android:visibility="gone"/>

    <Button
        android:id="@+id/frag_register_submit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_below="@id/frag_register_protocol_ll"
        android:layout_centerHorizontal="true"
        android:text="@string/s_frag_register_submit"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:background="@drawable/login_button"/>

</RelativeLayout>